re PR middle-end/33348 (gfortran.dg/g77/19990826-3.f fails at -O1)

PR middle-end/33348
	PR target/33406
	* loop-invariant.c (move_invariant_reg): Unshare sequence.

From-SVN: r128547